fixed crispy forms

--- a/mvcdemo/templates/home.html
+++ b/mvcdemo/templates/home.html
@@ -1,9 +1,10 @@
 {% extends 'main.html' %}
+{% load static %}
 {% include 'status.html' %}
 {%block content%}
 <div class="container">
     <div class="row">
-        <div class="col-md-8 x-auto">
+        <div class="col-md-8 mx-auto">
             <h2 class="text-center">PRODUCTS</h2>
             <hr>
             <div class="card card-body">
