--- a/mvcdemo/templates/post_product.html
+++ b/mvcdemo/templates/post_product.html
@@ -1,7 +1,19 @@
+{% extends 'main.html' %}
+{% load crispy_forms_tags %}
+{% load static %}
+
 {%block content%}
-<form action="" method="POST">
-    {% csrf_token %}
-    {{form}}
-    <input type="submit" name="Submit">
-</form>
+<hr>
+<div class="container">
+    <div class="row">
+        <div class="col-md-6 mx-auto">
+            <form  method="POST">
+                {% csrf_token %}
+                {{form|crispy}}
+                <input type="submit" name="Submit">
+            </form>
+        </div>
+    </div>
+</div>
+
 {%endblock%}
